# ignition

./: .gitignore  .gitmodules  AndroidProject.py  CMakeLists.txt  Doxyfile  Makefile  README.md
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/xtengine/XtAndroid/: XTGLES2View.java  XTGLESActivity.java  XtEngine.java
android/app/src/main/res/values/: strings.xml
cmake/: Android.cmake  Linux.cmake  Windows.cmake
docs/html/: Android_2XtDebugDevice_8h_source.html  Android_2XtDefaultDevice_8cpp_source.html  Android_2XtDefaultDevice_8h_source.html  IXtInputObserver_8h_source.html  IXtLogService_8h_source.html  IXtPlatform_8h_source.html  IXtRenderDevice_8h_source.html  IXtTime_8h_source.html  Linux_2XtDebugDevice_8h_source.html  Linux_2XtDefaultDevice_8cpp_source.html  Linux_2XtDefaultDevice_8h_source.html  PlatformEntry_8cpp_source.html  PlatformEntry_8h_source.html  Windows_2XtDebugDevice_8h_source.html  Windows_2XtDefaultDevice_8cpp_source.html  Windows_2XtDefaultDevice_8h_source.html  XtAndroidLogService_8cpp_source.html  XtAndroidLogService_8h_source.html  XtAndroidNativeBindings_8cpp_source.html  XtAndroidNative_8h_source.html  XtCall_8h.html  XtCall_8h__dep__incl.map  XtCall_8h__dep__incl.md5  XtCall_8h_source.html  XtCommon_8h_source.html  XtDependencyUnit_8cpp_source.html  XtDependencyUnit_8h_source.html  XtDeviceParams_8h_source.html  XtDirectX11_8cpp_source.html  XtDirectX11_8h_source.html  XtEngine_8cpp_source.html  XtEngine_8h_source.html  XtEventQueue_8cpp_source.html  XtEventQueue_8h.html  XtEventQueue_8h__dep__incl.map  XtEventQueue_8h__dep__incl.md5  XtEventQueue_8h__incl.map  XtEventQueue_8h__incl.md5  XtEventQueue_8h_source.html  XtEvent_8cpp_source.html  (+243 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  search.css  searchdata.js  variables_0.js  (+10 more)
src/: XtCommon.h
src/Core/: IXtDevice.h  IXtPlatform.h  IXtTime.h  PlatformEntry.cpp  PlatformEntry.h  XtDeviceParams.h  XtEngine.cpp  XtEngine.h  XtMetadata.cpp  XtMetadata.h
src/Core/Event/: XtEvent.cpp  XtEvent.h  XtEventQueue.cpp  XtEventQueue.h
src/Core/FileSystem/: IXtFileSystem.h  XtFileMode.h  XtFileOperationError.h  XtFileSystemManager.cpp  XtFileSystemManager.h  XtWriteMode.h
src/Core/Input/: IXtInputObserver.h  XtInputCommon.h  XtInputManager.cpp  XtInputManager.h
src/Core/Log/: IXtLogService.h  XtLogManager.cpp  XtLogManager.h
src/Core/Logic/: XtCall.h  XtLogic.cpp  XtLogic.h
src/Core/Platform/Android/: XtAndroidLogService.cpp  XtAndroidLogService.h  XtAndroidNative.h  XtAndroidNativeBindings.cpp  XtAndroidProject.h.in  XtDefaultDevice.cpp  XtDefaultDevice.h
src/Core/Platform/Android/gradle/app/: AndroidManifest.xml  build.gradle
src/Core/Platform/Android/java/: $APPLICATION$.java  XTGLES2View.java  XtEngine.java
src/Core/Platform/Linux/: XtDebugDevice.h  XtDefaultDevice.cpp  XtDefaultDevice.h  XtLinuxFileSystem.cpp  XtLinuxFileSystem.h  XtLinuxLogService.cpp  XtLinuxLogService.h
src/Core/Platform/Windows/: XtDebugDevice.h  XtDefaultDevice.cpp  XtDefaultDevice.h  XtWindowInstance.cpp  XtWindowInstance.h  XtWindowsLogService.cpp  XtWindowsLogService.h
src/Core/Render/: IXtRenderDevice.h
src/Core/Render/DirectX/: XtDirectX11.cpp  XtDirectX11.h
src/Core/Render/OpenGL/: XtOpenGL.cpp  XtOpenGL.h
src/Core/Time/: XtSystemTime.cpp  XtSystemTime.h
src/Modules/: XtDependencyUnit.cpp  XtDependencyUnit.h  XtModule.cpp  XtModule.h  XtModuleCommon.h  XtModuleManager.cpp  XtModuleManager.h  XtNullModule.cpp  XtNullModule.h
src/Patterns/: XtSingleton.h
